# sol_gui

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
src/: app.cc  app.h  main.cc  window.h
src/platform/: sdl_window.cc  sdl_window.h
